unpackaged/main/default/objects/Banded_Pricing__c/Banded_Pricing__c.object-meta.xml
<CustomObject>
    <label>Banded Pricing</label>
    <nameField>
        <label>Banded Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banded Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>