unpackaged/main/default/objects/Banded_Pricing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Banded Pricings</relationshipLabel>
    <relationshipName>Banded_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>