unpackaged/main/default/objects/Banded_Pricing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Category__c</field>
            <operation>equals</operation>
            <value>Module</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Banded Pricings</relationshipLabel>
    <relationshipName>Banded_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>