unpackaged/main/default/objects/Banded_Pricing__c/fields/Quantity_per_Band__c.field-meta.xml
<CustomField>
    <fullName>Quantity_per_Band__c</fullName>
    <label>Quantity per Band</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>