unpackaged/main/default/objects/Banded_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Quantity_per_Band__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>